Updated features and fixed bugs

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <p class = "winners hide">winner</p>
             <button class = "newGame hide">New Game</button>
         </div>
-        <h1>Tic Tac Toe</h1>
+        <h1 class="title">Tic Tac Toe</h1>
         <div class = container>
             <div class = game>
                 <button class = "box turn"></button>
